--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <a href="#" class="btn">Shop Now</a>
         </div>
         <div class="home-img">
-            <img src="/main.png" alt="">
+            <img src="main.png" alt="">
         </div>
     </section>
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/about.jpg" alt="">
+            <img src="about.jpg" alt="">
         </div>
         <div class="about-text">
             <h2>Our history</h2>
@@ -62,7 +62,7 @@
         <!--Container-->
         <div class="products-container">
             <div class="box">
-                <img src="/p1.png" alt="">
+                <img src="p1.png" alt="">
                 <h3>Americano Pure</h3>
                 <div class="content">
                     <span>$25</span>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/p2.png" alt="">
+                <img src="p2.png" alt="">
                 <h3>Americano Pure</h3>
                 <div class="content">
                     <span>$25</span>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/p3.png" alt="">
+                <img src="p3.png" alt="">
                 <h3>Americano Pure</h3>
                 <div class="content">
                     <span>$25</span>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/p4.png" alt="">
+                <img src="p4.png" alt="">
                 <h3>Americano Pure</h3>
                 <div class="content">
                     <span>$25</span>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/p5.png" alt="">
+                <img src="p5.png" alt="">
                 <h3>Americano Pure</h3>
                 <div class="content">
                     <span>$25</span>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/p6.png" alt="">
+                <img src="p6.png" alt="">
                 <h3>Americano Pure</h3>
                 <div class="content">
                     <span>$25</span>
@@ -129,7 +129,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae accusamus porro nulla ipsam vitae
                     quis?</p>
                 <h2>Yasin Arafat</h2>
-                <img src="/rev1.jpg" alt="">
+                <img src="rev1.jpg" alt="">
             </div>
             <div class="box">
                 <div class="stars">
@@ -142,7 +142,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae accusamus porro nulla ipsam vitae
                     quis?</p>
                 <h2>Yasin Arafat</h2>
-                <img src="/rev2.jpg" alt="">
+                <img src="rev2.jpg" alt="">
             </div>
             <div class="box">
                 <div class="stars">
@@ -155,7 +155,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae accusamus porro nulla ipsam vitae
                     quis?</p>
                 <h2>Yasin Arafat</h2>
-                <img src="/rev3.jpg" alt="">
+                <img src="rev3.jpg" alt="">
             </div>
         </div>
     </section>
